# history-generator-rpg

./: Cargo.toml  build.sh  character_mockup.aseprite  credits.md  ideas.md  kathay_city_mock.aseprite  readme.md  references.md  sprites.md  tech_debt.md  todo.md  ui_mockup.aseprite
assets/localization/: en-US.ftl
assets/sprites/: 16subset_template.aseprite  banner.aseprite  bed.aseprite  box.aseprite  button.aseprite  character.aseprite  coven.aseprite  cursor.aseprite  fiend.aseprite  floor.aseprite  grass.aseprite  lance.aseprite  leshen.aseprite  light.png~  mace.aseprite  missing.aseprite  palette.aseprite  palette_v2.aseprite  player.aseprite  sand.aseprite  settlements.aseprite  sone_walls.aseprite  spider.aseprite  stone.aseprite  stone_walls.aseprite  stool.aseprite  sword.aseprite  table.aseprite  tiles.aseprite  tree.aseprite  water.aseprite
assets/structures/: bandit_camp.toml  varningr_lair.toml  village.toml  wilderness.toml
docs/: 0. Ideas.md  1. Planning.md  2. Tech Debt & Perf.md  3. Release Notes.md  Game Loop.md  Rules.md  release_checklist.md  sprites.md
docs/.obsidian/: appearance.json  workspace.json
lib/engine/: Cargo.toml
lib/math/: Cargo.toml
src/: main.rs
src/chunk_gen/: chunk_generator.rs  jigsaw_parser.rs  jigsaw_structure_generator.rs  mod.rs  structure_filter.rs
src/commons/: astar.rs  bitmask.rs  damage_model.rs  history_vec.rs  id_vec.rs  interpolate.rs  matrix_index.rs  mod.rs  resource_map.rs  xp_table.rs
src/engine/: animation.rs  assets.rs  audio.rs  geometry.rs  input.rs  layered_dualgrid_tilemap.rs  mod.rs  pallete_sprite.rs  render.rs  scene.rs  sprite.rs  spritesheet.rs  tilemap.rs
src/game/: action.rs  actor.rs  ai.rs  chunk.rs  codex.rs  console.rs  effect_layer.rs  game_context_menu.rs  game_log.rs  health_component.rs  hotbar.rs  log.rs  map_component.rs  map_modal.rs  mod.rs  options.rs  player_pathing.rs  state.rs
src/globals/: mod.rs  perf.rs
src/literature/: mod.rs
src/loadsave/: mod.rs
src/localization/: mod.rs
src/resources/: action.rs  biome.rs  (+8 more)
(+304 files in other folders)
