[package]
name = "tales_of_kathay"
version = "0.1.0"
edition = "2021"

[dependencies]
noise = "0.9.0"
piston = "1.0.0"
piston2d-graphics = "0.45.0"
#piston2d-opengl_graphics = "0.89.0"
piston2d-opengl_graphics = { path = "../opengl_graphics" }
pistoncore-sdl2_window = "0.71.0"
image = "0.25.5"
rodio = "0.20.1"
toml = "0.8.22"
serde = { version = "1.0.219", features = ["derive"] }
chrono = { version = "0.4.41", features = ["serde"] }
serde_json = "1.0.142"
postcard = "1.1.3"
heapless = "0.8.0"
ciborium = "0.2.2"

[profile.release]
# Stip symbols
strip = true
# All optimizations
opt-level = 3
# Link time optimizations (full)
lto = true
