[package]
name = "tales_of_kathay"
version = "0.1.2"
edition = "2021"

[dependencies]
noise = "0.9.0"
piston = "1.0.0"
piston2d-graphics = "0.44.0"
# https://github.com/PistonDevelopers/glutin_window/issues/212
pistoncore-glutin_window = { git = "https://github.com/Jouwee/glutin_window.git" }
piston2d-opengl_graphics = "0.85.0"
image = "0.25.5"
rodio = "0.20.1"
toml = "0.8.22"
serde = { version = "1.0.219", features = ["derive"] }
chrono = { version = "0.4.41", features = ["alloc", "serde", "unstable-locales"] }
serde_json = "1.0.142"
ciborium = "0.2.2"
fluent = "0.17.0"
unic-langid = "0.9.6"

[profile.release]
# Stip symbols
strip = true
# All optimizations
opt-level = 3
# Link time optimizations (full)
lto = true
